syntax = "proto3";

package red.proto.account;

message Account {
    string account_no = 1;
    string account_name = 2;
    uint32 account_type = 3;
    string currency_code = 4;
    uint64 user_id = 5;
    string user_name = 6;
    uint32 status = 7;
    uint64 created_at = 8;
    uint64 update_at = 9;
}

message TradeParticipator {
    string account_no = 1;
    int32 account_type = 2;
    uint64 user_id = 3;
    string user_name = 4;
}

message AccountTransfer {
    TradeParticipator trade_body = 1;
    TradeParticipator trade_target = 2;
    uint64 amount = 3;
    int32 change_type = 4;
    int32 change_flag = 5;
    string desc = 6;
}

